# faab-hyperparams

./: .gitignore  .gitmodules  Pipfile  deptree.txt  pyproject.toml  readme.md  requirements.txt  setup-bela.md  test-osc.ipynb
bela-code/: compile.sh
bela-code/BinaryStreamer/: BinaryStreamer.h  render.cpp
bela-code/BufferLoader/: BufferLoader.h
bela-code/binary-streamer/: BinaryStreamer.cpp  render.cpp
bela-code/faab-record/: render.cpp
bela-code/faab-run/: render.cpp
bela-code/faab-run-nosensors/: BinaryStreamer.cpp  BinaryStreamer.h  render.cpp
bela-code/faab-run-nosensors-osc/: BufferLoader.cpp  BufferLoader.h  render.cpp
bela-code/faab-run-pepper/: render.cpp
bela-code/faab-run-with-filters/: render.cpp
bela-code/read-file-test/: BufferLoader.cpp  render.cpp
cape/: cape_vs_pepper_ranges.ipynb
dev/: dev.ipynb  rsync  run-loop.ipynb
scripts/: copy.sh
src/: __init__.py  _download_models.ipynb  _ranges.ipynb  callback-w-osc-send.py  callback.py  dev.ipynb  faab-run-loop-testing.ipynb  faab-run-loop.ipynb  run-loop-test.py  run-loop.ipynb  run-loop.py  train.py  utils.py
src/configs/: tf_md.yaml  tf_md_sw_de.yaml  tf_md_sw_fb.yaml  tf_md_sw_mp.yaml  tf_md_sw_ph.yaml  tf_md_sw_wh.yaml  transformer-time.yaml  transformer-time_sweep.yaml  transformer-time_test.yaml  transformer.yaml  transformer_sweep.yaml  transformer_test.yaml  transformer_time_sweep.yaml  transformer_time_test.yaml
src/dataset/: __init__.py  data_collection january.ipynb  data_collection july.ipynb  data_collection.ipynb  dataset.py
supercollider/: faab-ai-mami.scd
(+17 files in other folders)
