[project]
name = "faab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biquad==0.4",
    "fqdn==1.5.1",
    "importlib-metadata==8.0.0",
    "isoduration==20.11.0",
    "jaraco-collections==5.1.0",
    "jsonpointer==3.0.0",
    "matplotlib>=3.10.1",
    "pandas==2.2.3",
    "pybela==2.0.3",
    "python-osc>=1.9.3",
    "scipy>=1.15.2",
    "torch==2.2.2",
    "uri-template==1.3.0",
    "wandb==0.16.0",
    "webcolors==24.11.1",
]

[dependency-groups]
dev = [
    "sounddevice>=0.5.1",
]
